<resources>
    <string name="app_name">ClothingStore</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_field_hint_first_name">First Name</string>
    <string name="text_field_hint_last_name">Last Name</string>
    <string name="text_field_hint_mobile_number">Mobile Number</string>
    <string name="text_field_prefix_mobile_number">+977 </string>
    <string name="text_field_hint_email">Email</string>
    <string name="text_field_hint_password">Password</string>
    <string name="text_field_hint_repeat_password">Repeat Password</string>
    <string name="btn_text_already_have_an_account">Already have an account?</string>
    <string name="btn_text_sign_up">Sign up</string>
    <string name="text_login">Login</string>
    <string name="btn_text_forgot_your_password">Forgot your password?</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_forgot_password_description">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="btn_text_send_link">Send Link</string>
    <string name="btn_text_back_to_login">Back to Login</string>
    <string name="bn_home_title">Home</string>
    <string name="bn_categories_title">Categories</string>
    <string name="bn_cart_title">Cart</string>
    <string name="bn_profile_title">Profile</string>
    <string name="bn_search_title">Search</string>
    <string name="txt_explore">Explore</string>
    <string name="text_toolbar_home_title">Home</string>
    <string name="text_toolbar_categories_title">Categories</string>
    <string name="text_toolbar_search_title">Search</string>
    <string name="text_cart_title">My Bag</string>
    <string name="text_checkout_title">Checkout</string>
    <string name="text_search_title">Search</string>
    <string name="txt_sold_out">Sold out</string>
    <string name="txt_currency">NRs </string>
    <string name="tab_text_men">Men</string>
    <string name="tab_text_women">Women</string>
    <string name="chip_text_all">All</string>
    <string name="text_empty_products">Sorry, we dont have any products of this category.</string>
    <string name="text_empty_searched_products">Sorry, we could not find any products.</string>
    <string name="text_empty_cart">You have not added anything in your bag.</string>
    <string name="btn_text_add_to_bag">Add To Bag</string>
    <string name="btn_text_checkout">Checkout</string>
    <string name="btn_text_submit_order">Submit Order</string>
    <string name="dialog_btn_txt_add">ADD</string>
    <string name="dialog_btn_txt_cancel">Cancel</string>
    <string name="option_txt_size">Size:</string>
    <string name="txt_quantity">Quantity:</string>
    <string name="txt_total">Total:</string>
    <string name="txt_summary">Summary:</string>
    <string name="txt_delivery">Delivery:</string>
    <string name="txt_order">Order:</string>
    <string name="text_shipping_address">Shipping Address</string>
    <string name="text_hint_street_name">Street/tole, ward no.</string>
    <string name="text_hint_extra_notes_optional">Extra notes (optional)</string>
    <string name="text_title_my_profile">My Profile</string>
    <string name="option_title_text_my_orders">My Orders</string>
    <string name="option_title_text_edit_profile">Edit Profile</string>
    <string name="option_title_text_change_password">Change Password</string>
    <string name="option_title_text_about">About</string>
    <string name="option_title_text_logout">Logout</string>
    <string name="not_logged_in_message">You are not logged in. Please login/signup first to proceed.</string>
    <string name="btn_text_skip_for_now">Skip for now</string>
    <string name="logout_confirmation_message">Are you sure you want to Logout?</string>
    <string name="text_order_summary">Order Summary</string>
    <string name="chip_text_pending_orders">Pending Orders</string>
    <string name="chip_text_order_history">Order History</string>
    <string name="text_empty_orders">You have no orders yet.</string>
    <string name="text_ordered_date">Ordered date:</string>
    <string name="text_total_amount">Total Amount:</string>
    <string name="text_status">Status:</string>
    <string name="toolbar_title_text_my_orders">My Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_text_save_profile">Save Profile</string>
    <string name="toolbar_title_edit_profile">Edit Profile</string>
    <string name="text_field_current_password">Current Password</string>
    <string name="text_field_new_password">New Password</string>
    <string name="btn_text_change_password">Change Password</string>
    <string name="toolbar_title_change_password">Change Password</string>
    <string name="txt_terms_of_service_n_privacy_policy">By signing in, you are agreeing to our Terms of Service and Privacy Policy</string>
</resources>