<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bn_home_title" />


    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_catalog"
        android:title="@string/bn_categories_title" />

    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/bn_favourites_title" />

    <item
        android:id="@+id/shoppingCartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/bn_cart_title" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/bn_profile_title"/>
</menu>